# CDP7

./: .gitignore  CMakeLists.txt  README.md  building.txt
dev/: CMakeCache.txt  CMakeLists.txt  makeprograms.sh  programlist.txt  veryclean.sh
dev/Release/: abfdcode  abfpan  abfpan2  analjoin  blur  brkdur  brktopi  cantor  cdparams  cdparams_other  cdparse  ceracu  channelx  chanphase  chorder  chxformat  columns  combine  constrict  copysfx  dirsf  diskspace  distort  envel  envnu  extend  fastconv  features  filter  filtrage  fixgobo  flutter  fmdcode  focus  fofex  formants  fracture  frame  freeze  gate  (+111 more)
dev/blur/: CMakeLists.txt  ap_blur.c  blur.c  main.c
dev/cdp2k/: CMakeLists.txt  dzsetup.c  formantsg.c  mainfuncs.c  multi.c  parstruct.c  readdata.c  readfiles.c  special.c  tkinput.c  tklib1-32.c  tklib1.c  tklib3.c  validate.c  writedata.c  writepvoc.c
dev/cdparams/: CMakeLists.txt  cdparams.c  display.c  flagnames.c  parnames.c
dev/cdparams_other/: CMakeLists.txt  cdparams_other.c
dev/cdparse/: CMakeLists.txt  cdparse.c  cdparse_other.c
dev/combine/: CMakeLists.txt  ap_combine.c  combine.c  main.c
dev/distort/: CMakeLists.txt  distortm.c  main.c
dev/editsf/: CMakeLists.txt  ap_edit.c  cut.c  main.c  twixt.c
dev/env/: CMakeLists.txt  ap_envel.c  envel.c  envfuncs.c  envimpos.c  envprepro.c  envprocess.c  envxtract.c  main.c  pluck.c
dev/extend/: CMakeLists.txt  ap_extend.c  drunk.c  drunkfix.c  extprepro.c  iterate.c  main.c  zigzag.c
dev/filter/: CMakeLists.txt  ap_filter.c  filters0.c  filters1.c  fltpcon.c  fltprepro.c  main.c
dev/focus/: CMakeLists.txt  ap_focus.c  focus.c  main.c
dev/formants/: CMakeLists.txt  ap_formants.c  formants.c  formav.c  main.c
dev/grain/: CMake  CMakeLists.txt  ap_grain.c  grain.c  grain1.c  graprepro.c  main.c
dev/hfperm/: CMakeLists.txt  ap_hfperm.c  hfperm.c  main.c
dev/hilite/: CMakeLists.txt  ap_hilite.c  hilite.c  main.c
dev/sfsys/: CMakeLists.txt  alias.c  osbind.c  props.c  scandir.c  scandir.h  sfdir.c  sffuncs.h  sfsys.c  shortcuts.c  snd.c
include/: cdplib.h  chanmask.h  osbind.h  props.h  sfsys.h
libaaio/libaaio-0.3.1/: aaio.lo  aaio1.c  aaio2.c  aclocal.m4  config.cache  config.status  configure  configure.in  libaaio.la  libtool
libaaio/libaaio-0.3.1/.libs/: libaaio.la  libaaio.lai  libaaio.so.0  libaaio.so.0.1.1
libaaio/libaaio-0.3.1/man/man3/: aaio.h.3  aaio_grant_tty_lock.3
(+289 files in other folders)
