#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.13)
dnl AC_INIT(libaaio, 0.2.0, macbishop@users.sf.net)
AC_INIT(aaio.c)

dnl AC_CONFIG_HEADER([config.h])
dnl DON'T FORGET TO CHANGE LIBTOOL VERSION IN MAKEFILE.AM
AM_INIT_AUTOMAKE(libaaio,0.3.1)

# Checks for programs.
AC_PROG_CC
dnl AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([stdlib.h string.h stdio.h errno.h sys/types.h sys/wait.h \
			   sys/ioctl.h unistd.h],,
			   AC_MSG_ERROR([Required header missing]))

AC_CHECK_HEADERS([sys/filio.h],,)

AC_CHECK_HEADERS([termios.h],, 
       AC_MSG_WARN([Missing header old (slow) library will be built]) 
       AC_DEFINE([OLD_STYLE]),)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T

# Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS([malloc fork pipe dup2 system ioctl],,
		       AC_MSG_ERROR([Required function missing]))

AC_ARG_ENABLE([oldstyle], [  --enable-oldstyle	  Build old style (no ioctl) library], AC_DEFINE([OLD_STYLE]),)

AC_OUTPUT([Makefile man/Makefile man/man3/Makefile])

